# gen-ai-software-engineering

./: .mcp.json  AGENTS.md  CLAUDE.md
homework-1/: .gitignore  HOWTORUN.md  README.md  pyproject.toml
homework-1/demo/: run.sh  sample-data.json  sample-requests.http
homework-1/src/app/: main.py
homework-1/src/app/api/: accounts.py  transactions.py
homework-1/tests/: conftest.py
homework-1/tests/integration/: test_export_api.py  test_filters_api.py  test_transactions_api.py  test_validation_api.py
homework-1/tests/unit/: test_balances.py  test_csv_export.py  test_store.py  test_validators.py
homework-2/: API_REFERENCE.md  ARCHITECTURE.md  Dockerfile  HOWTORUN.md  README.md  TESTING_GUIDE.md  pyproject.toml
homework-2/demo/: run.sh  sample-requests.http  sample_tickets.csv  sample_tickets.json  sample_tickets.xml
homework-2/docs/: phase-log.md  task1-design.md  task2-design.md
homework-2/src/app/: main.py
homework-2/tests/: conftest.py
homework-2/tests/fixtures/: invalid_tickets.csv  invalid_tickets.json  valid_tickets.csv  valid_tickets.json  valid_tickets.xml
homework-2/tests/integration/: test_integration.py  test_performance.py  test_ticket_api.py
homework-2/tests/unit/: test_categorization.py  test_import_csv.py  test_import_json.py  test_import_xml.py  test_smoke.py  test_store.py  test_ticket_model.py
homework-4/: HOWTORUN.md  README.md  TASKS.md  pyproject.toml  run-pipeline.sh
homework-4/agents/: bug-fixer.agent.md  bug-planner.agent.md  bug-researcher.agent.md  research-verifier.agent.md  security-verifier.agent.md  unit-test-generator.agent.md
homework-4/skills/: research-quality-measurement.md  unit-tests-FIRST.md
homework-4/src/app/: main.py  storage.py
homework-4/tests/: conftest.py  test_001_security_path_traversal.py  test_002_missing_404.py  test_003_silent_overwrite.py  test_smoke.py
homework-6/: .gitignore  HOWTORUN.md  README.md  agents.md  config.py  demo.sh  integrator.py  pyproject.toml  research-notes.md  rules.json  specification.md
homework-6/.githooks/: pre-push
homework-6/agents/: __init__.py  _shared.py  compliance_checker.py  fraud_detector.py  notification_agent.py  rule_engine.py  transaction_validator.py
homework-6/api/: __init__.py  main.py
homework-6/demo/: run.sh  sample-data.json  sample-requests.md
homework-6/docs/screenshots/: README.md
homework-6/mcp/: server.py
homework-6/scripts/: claude-push-gate.sh  coverage-gate.sh  install-hooks.sh
homework-6/tests/: conftest.py  test_api.py  test_compliance_checker.py  test_config.py  test_fraud_detector.py  test_integration.py  test_mcp_server.py  test_notification_agent.py  test_pipeline_stages.py  test_robustness.py  test_rule_engine.py  test_shared.py  test_transaction_validator.py
(+66 files in other folders)
