[project]
name = "banking-api"
version = "0.1.0"
description = "Banking Transactions REST API — Homework 1"
authors = [{ name = "dekogen", email = "denkondrat13@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<7",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
