[project]
name = "support-tickets-api"
version = "0.1.0"
description = "Intelligent Customer Support System — Homework 2"
authors = [{ name = "dekogen", email = "denkondrat13@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.0",
    "defusedxml>=0.7",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<7",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
